# manipulation_server

./: README.md
action_server/: CMakeLists.txt  package.xml  thirparty.repos
action_server/include/manipulation/: MTCNode.hpp  ManipulationServer.hpp  MoveToActionClient.hpp  MoveToActionServer.hpp  manipulation_behaviors.hpp
action_server/launch/: client.launch.py  server.launch.py
action_server/params/: params.yaml
action_server/src/: main_cli.cpp  main_srv.cpp
action_server/src/manipulation/: MTCNode.cpp  ManipulationServer.cpp  MoveToActionClient.cpp  MoveToActionServer.cpp  manipulation_behaviors.cpp
manipulation_action/: CMakeLists.txt  package.xml
manipulation_action/action/: MoveTo.action
manipulation_action_server/: CMakeLists.txt  README.md  package.xml  thirparty.repos
manipulation_action_server/include/manipulation/: MTCNode.hpp  ManipulationServer.hpp  MoveEndEffectorActionClient.hpp  MoveJointActionClient.hpp  MoveToActionClient.hpp  MoveToPredefinedActionClient.hpp  manipulation_behaviors.hpp
manipulation_action_server/launch/: client.launch.py  server.launch.py
manipulation_action_server/params/: client.yaml  params.yaml  ros_vino_params.cfg
manipulation_action_server/script/: manipulation_test.py
manipulation_action_server/src/: main_eef.cpp  main_joint.cpp  main_predef.cpp  main_srv.cpp
manipulation_action_server/src/manipulation/: MTCNode.cpp  ManipulationServer.cpp  MoveEndEffectorActionClient.cpp  MoveJointActionClient.cpp  MoveToActionClient.cpp  MoveToPredefinedActionClient.cpp  manipulation_behaviors.cpp
manipulation_interfaces/: CMakeLists.txt  package.xml
manipulation_interfaces/action/: GenerateGraspPoses.action  MoveEndEffector.action  MoveGroup.action  MoveJoint.action  MoveTo.action  MoveToPredefined.action  Pick.action  PickAndPlace.action  PickFromPc.action  Place.action
